[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | alembic
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
name = "please-just-texting"
version = "0.1.0"
description = ""
authors = ["dolggul2"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.110.0"
uvicorn = "0.27.1"
pydantic-settings = "2.2.1"
black = "24.2.0"
flake8 = "7.0.0"
isort = "5.13.2"
sqlalchemy = "2.0.27"
alembic = "1.13.1"
mysqlclient = "2.2.4"
openai = "1.13.3"
python-dotenv = "1.0.1"
google-api-python-client = "2.119.0"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.0"
datetime = "5.4"
jinja2 = "3.1.3"
python-multipart = "0.0.9"
mypy = "1.8.0"
passlib = "1.7.4"
email-validator = "2.1.1"
asyncmy = "0.2.9"
cryptography = "42.0.7"
pydantic = "2.6.3"
google-auth = "2.28.1"
httpx = "^0.27.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
